Fixed issue with Board title wrap - fixed active button color for projects

--- a/Pages/Projects.razor.css
+++ b/Pages/Projects.razor.css
@@ -1,6 +1,9 @@
 ﻿body {
 }
 
+.active {
+    background-color: rgba(0, 148, 255, 1) !important;
+}
 .project-title {
     justify-content: flex-start;
     display: flex;
